some fixes around scrollbars

--- a/src/components/dpmsgScreen.css
+++ b/src/components/dpmsgScreen.css
@@ -74,7 +74,7 @@
     flex-direction: column;
 
     & > .scrollarea {
-      height: calc(100% - 182px);
+      height: calc(100% - 137px);
       overflow: hidden;
 
       & .dpmsg-ScreenContentWrapper {
@@ -84,6 +84,8 @@
 
       & .Block--chat {
         margin-bottom: 0;
+        border-bottom-right-radius: 0;
+        border-bottom-left-radius: 0;
       }
 
       & .scrollbar-container {
@@ -93,7 +95,8 @@
     }
 
     & .dpmsg-WrapTextarea {
-      margin: 0 22px;
+      margin: -5px 22px 0;
+      box-shadow: 0 5px 5px rgba(29, 62, 85, 0.15);
       width: 356px;
     }
   }
